--- a/program/Dockerfile
+++ b/program/Dockerfile
@@ -1,7 +1,7 @@
 FROM python
-MAINTAINER DEEPU
+MAINTAINER deepanshu1s.ds@gamil.com
 RUN apt install python3 -y
 RUN mkdir /dockerlist
-COPY list.py /dockerlist/list.py
+COPY design.py /dockerlist/design.py
 WORKDIR /dockerlist
-CMD python3 /dockerlist/list.py
+CMD python3 /dockerlist/design.py
