--- a/dfFilterRows/Dockerfile
+++ b/dfFilterRows/Dockerfile
@@ -2,6 +2,6 @@ FROM python
 MAINTAINER 'deepanshu'
 RUN apt install python3 -y
 RUN mkdir /dockertest
-COPY dataframe_filter_row.py /dockertest/dataframe_filter_row.py
+COPY dataframe_rows_filter.py /dockertest/dataframe_rows_filter.py
 WORKDIR /dockerTest
-CMD python3 /dockertest/dataframe_filter_row.py
+CMD python3 /dockertest/dataframe_rows_filter.py
