--- a/dfFilterRows/Dockerfile
+++ b/dfFilterRows/Dockerfile
@@ -1,7 +1,7 @@
-FROM python3
+FROM python
 MAINTAINER 'deepanshu'
-RUN apt install python3 -y
+RUN apt install python -y
 RUN mkdir /dockertest
 COPY dataframe_rows_filter.py /dockertest/dataframe_rows_filter.py
 WORKDIR /dockerTest
-CMD python3 /dockertest/dataframe_rows_filter.py
+CMD python /dockertest/dataframe_rows_filter.py
